# Samurai-vs-Zombies-Data-Parser

./: CMakeLists.txt  README.md
include/: svz_data.hpp
